Only float `img` tags with align attributes. Related to issue #108.

--- a/app/sass/base/_reset.scss
+++ b/app/sass/base/_reset.scss
@@ -326,13 +326,13 @@ img {
 	max-width: 100%;
 }
 
-[align="left"] {
+img[align="left"] {
   @extend img;
   float:left;
   margin-right: 1em;
 }
 
-[align="right"] {
+img[align="right"] {
   @extend img;
   float:right;
   margin-left: 1em;
